--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
+    <title>Very Legit Company</title>
 </head>
 <body>
-    <h1>Not a pyramid scheme</h1>
-    <p>Just send us $100 and you'll get $1000 in return. This is very legit, not a pyramid scheme</p>
+    <h1>Welcome. You can trust us, we promise.</h1>
+    <p>Just send us $100 and you'll get $1000 in return. This is very legit, not a pyramid scheme.</p>
+
+    <img src="https://images-cdn.9gag.com/photo/aQdOXMz_700b.jpg" alt="Pyramid Scheme photo" class="pyramid">
 </body>
 </html>
