added js and css to controller

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>Just send us $100 and you'll get $1000 in return. This is very legit, not a pyramid scheme.</p>
 
     <img src="https://images-cdn.9gag.com/photo/aQdOXMz_700b.jpg" alt="Pyramid Scheme photo" class="pyramid">
+    <script src="/js"></script>
 </body>
 </html>
