made button to test error message

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <p>Just send us $100 and you'll get $1000 in return. This is very legit, not a pyramid scheme.</p>
 
     <img src="https://images-cdn.9gag.com/photo/aQdOXMz_700b.jpg" alt="Pyramid Scheme photo" class="pyramid">
+
+    <button class="test-critical-error">Click here! This will NOT install any viruses on your device.</button>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="/js"></script>
 </body>
 </html>
